# noxoscope

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY_LICENSES.txt
assets/models/cornell-box/: CornellBox-Noxoscope.mtl
assets/models/cube/: cube.blend
assets/models/groundplane/: plane.blend  plane.mtl  sponzaplane.mtl
assets/models/normalmap-test-cube/: normalmap-sphere.blend  normalmap-test-cube.blend  normalmap-test-cube.mtl
assets/models/skydome/: linkeltje_skydome_linkeltje_2.mtl
assets/models/sphere/: sphere-lowpoly.blend  sphere.blend
assets/models/sponza/: sponza.mtl
assets/shaders/: basic_post_process.vert  blur.frag  forward_shader.frag  forward_shader.vert  gbufferfill.frag  gbufferfill.vert  lightcombine.frag  lightpass.frag  render_texture.frag  simple.frag  simplemvp.vert  ssao.frag  ssr.frag
src/: Constants.cpp  Constants.h  Entity.cpp  Entity.h  FileTools.cpp  FileTools.h  GLObject.h  GLUtil.cpp  GLUtil.h  GeometryMath.cpp  GeometryMath.h  Light.h  Logging.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Noxoscope.cpp  Noxoscope.h  ShaderProgram.cpp  ShaderProgram.h
test/: MathTest.cpp  TestMain.cpp  TestShared.cpp  TestShared.h
